--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -20,7 +20,6 @@ html {
 body {
   padding: 0 vars.$side-padding;
   margin-top: 8rem;
-  overflow-x: hidden;
 
   @media screen and (max-width: vars.$breakpoint-md) {
     padding: 0 vars.$side-padding-mobile;
